Fix gaps that has orange dot.

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -9,6 +9,7 @@ body
     font-size: 1.5em
     margin-left: 1px
     margin-right: 1px
+    line-height: 0
   h1
     font-size: 1.5em
     text-align: center
